--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "main": "index.js",
+  "main": "app.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "jest"
   },
   "devDependencies": {
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "inquirer": "^6.5.2"
+    "inquirer": "^6.5.2",
+    "template-file": "^5.1.0"
   }
 }
