--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "app.js",
   "directories": {
-    "test": "test"
+    "test": "tests"
   },
   "scripts": {
     "start": "node app.js",
